# DZ_19_2

./: pyproject.toml
catalog/: views.py
config/config/: settings.py
